# bazel-typescript-app

./: BUILD.bazel  README.md  WORKSPACE.bazel  package.json  tsconfig.json
app/: WORKSPACE.bazel  package.json
demo/: prettier.bzl  ts_test.bzl
demo/bundle/: BUILD.bazel  entry.tsx  index.html  webpack.config.js
demo/myapp/: BUILD.bazel  test-setup.ts  ts_react_test.bzl
demo/myapp/home/: BUILD.bazel  footer.test.tsx  footer.tsx  home.tsx
demo/myapp/main/: BUILD.bazel  context.ts  main.test.tsx  main.tsx
demo/myframework/add/: BUILD.bazel  add.test.ts  add.ts  base64.ts
demo/myframework/doublestring/: BUILD.bazel  doublestring.test.ts  doublestring.ts
demo/myjslib/: BUILD.bazel  mylib.d.ts  mylib.js
