package(default_visibility=["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//demo/myapp:ts_react_test.bzl", "ts_react_test")

ts_library(
   name = "home",
   srcs = ["home.tsx", "footer.tsx"],
   deps = ["//demo/myframework/doublestring:doublestring", "@npm//@types/react"]
)

ts_react_test(
    name = "test",
    srcs = ["footer.test.tsx"],
    deps = [":home"]
)