package(default_visibility=["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//demo/myapp:ts_react_test.bzl", "ts_react_test")

ts_library(
   name = "main",
   srcs = ["main.tsx", "context.ts"],
   deps = ["//demo/myapp/home:home", "@npm//@types/react", "@npm//react"]
)

ts_react_test(
    name = "test",
    srcs = ["main.test.tsx"],
    deps = [":main"]
)
