package(default_visibility=["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//demo:ts_test.bzl", "ts_test")

ts_library(
   name = "add",
   srcs = ["add.ts", "base64.ts"],
   deps = ["@npm//@types/base-64", "@npm//base-64"]
)

ts_test(
   name = "test",
   srcs = ["add.test.ts"],
   deps = [":add"]
)
