package(default_visibility=["//visibility:public"])
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//demo:ts_test.bzl", "ts_test")
load("//demo:prettier.bzl", "prettier_test")

ts_library(
   name = "doublestring",
   srcs = ["doublestring.ts"],
   deps = ["//demo/myframework/add:add", "@npm//base-64", "@npm//@types/base-64"]
)

prettier_test(
   name = "doublestring-prettier",
   srcs = ["doublestring.ts"]
)

ts_test(
    name = "test",
    srcs = ["doublestring.test.ts"],
    deps = [":doublestring"]
)

prettier_test(
   name = "doublestring-test-prettier",
   srcs = ["doublestring.test.ts"]
)